<resources>
    <string name="app_name">Refer9</string>
    <string name="toolbar_heading">Refer9</string>
    <string name="appbar_heading">Refer9</string>
    <string name="profileDesc">User Profile</string>
    <string name="title_activity_login">Sign in</string>


    <!--Activity Labels-->
    <string name="label_Finance">Finance</string>
    <string name="label_health">Health</string>
    <string name="label_grooming">Grooming</string>
    <string name="label_others">Others</string>


    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="google">Google</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="sign_up_services_provider_checked_text">Service Provider</string>
    <string name="prompt_service_domain">Select Domain</string>

    <!--Errors-->
    <string name="empty_value">Empty field not allowed</string>
    <string name="error_invalid_name">Only Human\'s names allowed</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short(at least 6 Characters)</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>


    <string name="skip_text">Skip</string>
    <string name="register">Register</string>

    <string name="logo_contentDesc">Logo Image</string>

    <string name="setting_desc">This will load setting and others.</string>
    <string name="search_button_desc">Search button</string>

    <string name="setting">Setting</string>
    <string name="finance_icon_desc">Finance Icon</string>
    <string name="finance">Finance</string>

    <!--Finance Activity-->
    <string name="textureImage_desc">Image as text box background</string>
    <string name="next_button_text">Next>></string>
    <string name="coming_soon_text">Coming Soon</string>
    <string name="wheel_icon_desc">Wheel Items Icon</string>

    <!--Financial Services-->
    <string name="loan">Loan</string>
    <string name="insurance">Insurance</string>
    <string name="mutual_fund">Mutual Fund</string>
    <string name="fixed_deposit">Fixed Deposit</string>
    <string name="equity">Equity</string>

    <string name="loan_description">Refer for Loan with no hassle, no guarantee and starting from Rs 20,000, from a wide range of financial institutions.</string>
    <string name="insurance_description">Refer someone in need of insure his/her medical, financial or life with minimum as low as Rs 100/month.</string>
    <string name="mutualFund_description">Help people to shape for better tomorrow. Make them to save for future by starting an investment as low as Rs 500/month.</string>
    <string name="fixedDeposit_description">Fixed deposits are investment instruments offered by banks and non-banking financial companies, where you can deposit money for a higher rate of interest than savings accounts.</string>
    <string name="equity_description">Equity represents the amount of money that would be returned to a company’s shareholders if all of the assets were liquidated and all of the company\'s debt was paid off.</string>


    <!--Refer Details Activity-->
    <string name="refer_detail">Refer Details</string>
    <string name="nameHint">Name*</string>
    <string name="mobileNumberHint">Mobile Number*</string>
    <string name="emailHint">Email</string>
    <string name="occupationHint">Occupation</string>
    <string name="amountHint">Amount</string>
    <string name="referButton">Refer</string>

    <string name="loan_type_hint">Loan Type*</string>
    <string name="bank_name_hint">Select Bank*</string>
    <string name="state_hint">State*</string>
    <string name="city_hint">City*</string>


    <!--Navigation menu-->
    <string name="nav_header_title">Refer9</string>
    <string name="user">User</string>
    <string name="refer_details_title">Refer Details</string>
    <string name="settings_title">Setting</string>
    <string name="about_us_title">About us</string>
    <string name="terms_and_conditions_title">Terms &amp; Conditions</string>
    <string name="help_title">Help</string>
    <string name="signOut_title">Sign Out</string>
    <string name="user_Icon">User Image or Icon</string>
    <string name="anonymous">Hi Anonymous!</string>


    <string name="fragmentSignUp">Sign Up Fragment</string>
    <string name="fragmentSignIn">Sign In Fragment</string>
    <string name="login_background_texture">background texture</string>
    <string name="google_logo">Google logo</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out_text">Sign Out</string>
    <string name="back_button">back button</string>

    <!--
        Health activity
    -->
    <string name="health_profile_list_title">You are a</string>

    <!--
        Register activity
    -->

    <string name="hint_doc_name">Name</string>
    <string name="hint_doc_register_no">Registration No</string>
    <string name="hint_doc_type">Doctor Type</string>
    <string name="hint_doc_sub_type">Doctor Sub Type</string>
    <string name="hint_doc_passing_year">Passing Year</string>
    <string name="hint_doc_college">College</string>
    <string name="hint_doc_register_date">Registration Date</string>
    <string name="doc_registration_heading">Doctor Registration</string>

    <!--
        lab registration
    -->
    <string name="lab_register_heading">Lab Registration</string>
    <string name="hint_lab_address1">Address 1</string>
    <string name="hint_lab_address2">Address 2</string>
    <string name="hint_lab_city">City</string>
    <string name="hint_lab_pin_code">Pin Code</string>
    <string name="hint_lab_phone_no">Phone No</string>
    <string name="hint_lab_name">Name</string>
    <string name="hint_lab_services">Services</string>
    <string name="select">Select</string>
    <string name="title_services_list_dialog">Services, You have</string>

    <string name="menu_icon_desc">menu icon</string>
    <string name="notification_icon_desc">notification icon</string>

    <string name="open">open</string>
    <string name="close">close</string>


    <string name="health_icon_desc">health icon</string>
    <string name="grooming_icon_desc">grooming icon</string>
    <string name="others_icon_desc">others icon</string>

    <!--chart fragment-->

    <string name="successful">Successful</string>
    <string name="pending">Pending</string>
    <string name="unSuccessful">UnSuccessful</string>


</resources>
