<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
            android:id="@+id/group1">
        <item
                android:id="@+id/refer_details"
                android:icon="@drawable/refer_icon"
                android:title="@string/refer_details_title"/>
    </group>
    <group
            android:checkableBehavior="single"
            android:id="@+id/group2">
        <item
                android:id="@+id/about_us"
                android:icon="@drawable/about"
                android:title="@string/about_us_title"
                app:showAsAction="ifRoom"/>
        <item
                android:id="@+id/t_and_c"
                android:icon="@drawable/tandc"
                android:title="@string/terms_and_conditions_title"/>
        <item
                android:id="@+id/help"
                android:icon="@drawable/support"
                android:title="@string/help_title"
                app:showAsAction="ifRoom"/>
    </group>
    <group
        android:checkableBehavior="single"
        android:id="@+id/group3">
        <item
                android:id="@+id/signOut"
                android:icon="@drawable/ic_cloud_off_black_24dp"
                android:title="@string/signOut_title"
                app:showAsAction="ifRoom"/>
    </group>
</menu>