<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp"
        tools:context=".fragments.LabRegisterFragment">

    <TextView
            android:id="@+id/title_fragment_lab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:textStyle="bold"
            android:gravity="center"
            tools:text="@string/lab_register_heading"/>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout_style">

        <AutoCompleteTextView
                android:id="@+id/edit_text_lab_name"
                style="@style/AutoCompleteTextView_style"
                android:hint="@string/hint_lab_name"
                android:inputType="text|textCapWords"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout_style">

        <AutoCompleteTextView
                android:id="@+id/edit_text_lab_address1"
                style="@style/AutoCompleteTextView_style"
                android:hint="@string/hint_lab_address1"
                android:inputType="text|textCapWords"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout_style">

        <AutoCompleteTextView
                android:id="@+id/edit_text_lab_address2"
                style="@style/AutoCompleteTextView_style"
                android:hint="@string/hint_lab_address2"
                android:inputType="text|textCapWords"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/service_list_layout"
            style="@style/TextInputLayout_style">

        <AutoCompleteTextView
                android:id="@+id/edit_text_lab_services"
                style="@style/AutoCompleteTextView_style"
                android:spinnerMode="dropdown"
                android:overlapAnchor="false"
                android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                android:hint="@string/hint_lab_services"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout_style">

        <AutoCompleteTextView
                android:id="@+id/edit_text_lab_city"
                style="@style/AutoCompleteTextView_style"
                android:hint="@string/hint_lab_city"
                android:inputType="text|textCapWords"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout_style">

        <AutoCompleteTextView
                android:id="@+id/edit_text_lab_pin"
                style="@style/AutoCompleteTextView_style"
                android:hint="@string/hint_lab_pin_code"
                android:inputType="text|textCapWords"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout_style">

        <AutoCompleteTextView
                android:id="@+id/edit_text_lab_reg_no"
                style="@style/AutoCompleteTextView_style"
                android:hint="@string/hint_doc_register_no"
                android:inputType="text|textCapWords"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayout_style">

        <AutoCompleteTextView
                android:id="@+id/edit_text_lab_reg_date"
                style="@style/AutoCompleteTextView_style"
                android:hint="@string/hint_doc_register_date"/>

    </com.google.android.material.textfield.TextInputLayout>

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            style="@style/LoginButtons"
            android:id="@+id/btn_lab_register"
            android:text="@string/register"
            android:background="@drawable/button_shape"
            android:elevation="6dp"
            app:spinning_bar_width="4dp"
            app:spinning_bar_color="#FFF"
            app:spinning_bar_padding="2dp"
            app:initialCornerAngle="30dp"/>

</LinearLayout>