<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        android:id="@+id/refer_activity_id"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.ReferDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/white">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/refer_detail"
                android:textSize="24sp"
                android:textStyle="bold"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout_style" >

            <AutoCompleteTextView
                    android:id="@+id/loan_types"
                    style="@style/AutoCompleteTextView_style"
                    android:spinnerMode="dropdown"
                    android:overlapAnchor="false"
                    android:hint="@string/loan_type_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout_style">

            <AutoCompleteTextView
                    android:id="@+id/bank_names"
                    style="@style/AutoCompleteTextView_style"
                    android:spinnerMode="dropdown"
                    android:overlapAnchor="false"
                    android:hint="@string/bank_name_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayout_style"
                    android:layout_width="0dp"
                    android:layout_weight="1">

                <AutoCompleteTextView
                        android:id="@+id/states_list"
                        style="@style/AutoCompleteTextView_style"
                        android:layout_marginEnd="8dp"
                        android:spinnerMode="dropdown"
                        android:overlapAnchor="false"
                        android:hint="@string/state_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayout_style"
                    android:layout_weight="1"
                    android:layout_width="0dp">

                <AutoCompleteTextView
                        android:id="@+id/cities_names"
                        style="@style/AutoCompleteTextView_style"
                        android:layout_marginStart="8dp"
                        android:spinnerMode="dropdown"
                        android:overlapAnchor="false"
                        android:hint="@string/city_hint" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextInputLayout_style"
                        android:layout_width="0dp"
                        android:layout_weight="1">

                    <AutoCompleteTextView
                            android:id="@+id/edit_text_name"
                            style="@style/AutoCompleteTextView_style"
                            android:layout_marginEnd="8dp"
                            android:hint="@string/nameHint"
                            android:inputType="textPersonName|textCapWords"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextInputLayout_style"
                        android:layout_width="0dp"
                        android:layout_weight="1">

                    <AutoCompleteTextView
                            android:id="@+id/edit_text_mobileNumber"
                            style="@style/AutoCompleteTextView_style"
                            android:layout_marginStart="8dp"
                            android:hint="@string/mobileNumberHint"
                            android:inputType="number"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayout_style">

                <AutoCompleteTextView
                        android:id="@+id/edit_text_email"
                        style="@style/AutoCompleteTextView_style"
                        android:hint="@string/emailHint"
                        android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayout_style">

                <AutoCompleteTextView
                        android:id="@+id/edit_text_occupation"
                        style="@style/AutoCompleteTextView_style"
                        android:hint="@string/occupationHint"
                        android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayout_style">

                <AutoCompleteTextView
                        android:id="@+id/edit_text_amount"
                        style="@style/AutoCompleteTextView_style"
                        android:hint="@string/amountHint"
                        android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/button_refer_detail_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/referButton"/>

    </LinearLayout>

</LinearLayout>