<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:orientation="vertical"
        android:clipToPadding="false"
        android:id="@+id/signIn_fragment_id"
        tools:context=".fragments.SignInFragment">

    <LinearLayout
            android:id="@+id/signIn_page"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
                style="@style/TextBox_style"
                android:hint="@string/prompt_email">

            <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputBox_style"
                    android:id="@+id/signIn_email_box"
                    android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/TextBox_style"
                app:passwordToggleEnabled="true"
                android:hint="@string/prompt_password">

            <com.google.android.material.textfield.TextInputEditText
                    style="@style/TextInputBox_style"
                    android:id="@+id/signIn_password_box"
                    android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                style="@style/LoginButtons"
                android:id="@+id/signIn_Button"
                android:text="@string/action_sign_in"
                android:background="@drawable/button_shape"
                android:elevation="6dp"
                app:spinning_bar_width="4dp"
                app:spinning_bar_color="#FFF"
                app:spinning_bar_padding="1dp"
                app:initialCornerAngle="30dp"/>

        <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/shadow"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:weightSum="2"
                android:layout_marginTop="16dp">

            <com.google.android.gms.common.SignInButton
                    android:id="@+id/google_sign_in_button"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            <Button
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:id="@+id/skip_button"
                    android:text="@string/skip_text"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
                android:id="@+id/signUp_link_text"
                style="@style/FragmentSwitchText_style"/>

    </LinearLayout>

</LinearLayout>